WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130333
[EFL] vibration/cancelVibration-during-pattern-vibrating.html is failing after
r165598
https://bugs.webkit.org/show_bug.cgi?id=130333
Summary
[EFL] vibration/cancelVibration-during-pattern-vibrating.html is failing afte...
Krzysztof Wolanski
Reported
2014-03-17 06:59:10 PDT
Added setting m_state when calling Vibration::vibrate. It was missing after refactoring Vibration (
r165598
).
Attachments
proposed patch
(1.16 KB, patch)
2014-03-17 06:59 PDT
,
Krzysztof Wolanski
no flags
Details
Formatted Diff
Diff
apply suggestion
(1.15 KB, patch)
2014-03-18 04:38 PDT
,
Krzysztof Wolanski
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Krzysztof Wolanski
Comment 1
2014-03-17 06:59:58 PDT
Created
attachment 226908
[details]
proposed patch
Jinwoo Jeong
Comment 2
2014-03-18 03:42:46 PDT
If there is a timing issue and this patch makes a layout test to pass, m_state should be set as State::Waiting instead of State::Vibrating. If m_state is set as State::Vibrating, the first element of m_pattern will be used for waiting time.
Krzysztof Wolanski
Comment 3
2014-03-18 04:38:02 PDT
Created
attachment 227034
[details]
apply suggestion
WebKit Commit Bot
Comment 4
2014-03-19 02:18:07 PDT
Comment on
attachment 227034
[details]
apply suggestion Clearing flags on attachment: 227034 Committed
r165882
: <
http://trac.webkit.org/changeset/165882
>
WebKit Commit Bot
Comment 5
2014-03-19 02:21:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug