[EFL] vibration/cancelVibration-during-pattern-vibrating.html is failing after r165598 https://bugs.webkit.org/show_bug.cgi?id=130333

Patch by Krzysztof Wolanski <k.wolanski@samsung.com> on 2014-03-19
Reviewed by Gyuyoung Kim.

Added setting m_state when calling Vibration::vibrate. It was missing after
refactoring Vibration (r165598).

* Modules/vibration/Vibration.cpp:
(WebCore::Vibration::vibrate):

Canonical link: https://commits.webkit.org/148439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165882 268f45cc-cd09-0410-ab3c-d52691b4dbfc