Source/WebCore/Modules/vibration/Vibration.cpp
@@ -82,6 +82,7 @@ bool Vibration::vibrate(const VibrationPattern& pattern)
     m_pattern = sanitized;
 
     m_timer.startOneShot(0);
+    m_state = State::Waiting;
     return true;
 }
 
